# kago

./: Cargo.toml  LICENSE  README.md
.github/actions/cache_rust/: action.yml
.github/workflows/: ci.yml
examples/: multi-deployment.jsonnet  multi-deployment.yml  nginx-deployment.jsonnet  nginx-deployment.yml
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: kago-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/: agent.rs  api.rs  cli.rs  controller.rs  error.rs  main.rs  metrics.rs  models.rs  runtime.rs  store.rs
src/api/: deployments.rs  health.rs  metrics.rs  mod.rs  nodes.rs  pods.rs
src/controller/: mod.rs  scheduler.rs
tests/: common.sh  e2e.sh  test-schedulers.sh
