[package]
name = "kago"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
clap = { version = "4.5.55", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
bollard = "0.20.0"
futures-util = "0.3.31"
